Improve Resto Druid Simulation for BCC
Draft the Lifebloom simulation.

--- a/wow/simulation/bcc/resto-druid.ipynb
+++ b/wow/simulation/bcc/resto-druid.ipynb
@@ -7,8 +7,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "playerLevel = 60\n",
-    "spellPower = 974\n",
+    "playerLevel = 70\n",
+    "spellPower = 1358\n",
     "\n",
     "giftOfNature = 5\n",
     "naturalist = 5\n",
@@ -18,10 +18,12 @@
     "empoweredTouch = 2\n",
     "empoweredRejuv = 5\n",
     "\n",
-    "treeOfLife = True\n",
+    "treeOfLife = False\n",
     "\n",
-    "idolRejuv = 50\n",
+    "idolRejuv = 0\n",
     "idolTouch = 0\n",
+    "idolLifebloomTick = 88\n",
+    "idolLifebloomBomb = 0\n",
     "stormrage = False\n",
     "nordrassil = False\n",
     "thunderheart = False"
@@ -160,14 +162,51 @@
     "\n",
     "    spCoefficient = cast[i] / 3.5\n",
     "    healCoefficient = (1.0 + giftOfNature * 0.02) * (1.05 if thunderheart else 1.00)\n",
-    "    \n",
+    "\n",
     "    foo = calc(levels[i], amount, spCoefficient, healCoefficient)\n",
     "    foo = foo + spellPower * empoweredTouch * 0.10 * min(1.0, (levels[i] + 11) / playerLevel)\n",
     "    bar = manas[i] * (1.0 - tranquilSpirit * 0.02)\n",
-    "    \n",
+    "\n",
     "    print('Healing Touch (%d) = %d' % (i, foo))\n",
-    "    \n",
+    "\n",
     "    return foo / max(cast[i] - naturalist * 0.1, 1.5), foo / bar"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f995b3b5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calcLifebloomTick():\n",
+    "    level = 64\n",
+    "    amount = 273\n",
+    "\n",
+    "    spCoefficient = (1.0 + empoweredRejuv * 0.04) * 0.52\n",
+    "    healCoefficient = 1.0 + giftOfNature * 0.02\n",
+    "\n",
+    "    foo = calc(level, amount, spCoefficient, healCoefficient)\n",
+    "    foo += idolLifebloomTick * getPenalty(level) * spCoefficient\n",
+    "\n",
+    "    print('Lifebloom Tick = %d' % (foo / 7.0))\n",
+    "\n",
+    "    return foo\n",
+    "\n",
+    "\n",
+    "def calcLifebloomBomb():\n",
+    "    level = 64\n",
+    "    amount = 600\n",
+    "\n",
+    "    spCoefficient = (1.0 + empoweredRejuv * 0.04) * 0.34335\n",
+    "    healCoefficient = 1.0 + giftOfNature * 0.02\n",
+    "\n",
+    "    foo = calc(level, amount, spCoefficient, healCoefficient)\n",
+    "    foo += idolLifebloomBomb * getPenalty(level) * spCoefficient\n",
+    "\n",
+    "    print('Lifebloom Bomb = %d' % (foo))\n",
+    "\n",
+    "    return foo"
    ]
   },
   {
@@ -211,7 +250,7 @@
     "    plt.show()\n",
     "\n",
     "\n",
-    "plotRejuv(11)"
+    "plotRejuv(13)"
    ]
   },
   {
@@ -252,7 +291,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plotRegrowth(9, True)"
+    "plotRegrowth(10, True)"
    ]
   },
   {
@@ -262,7 +301,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plotRegrowth(9, False)"
+    "plotRegrowth(10, False)"
    ]
   },
   {
@@ -296,7 +335,21 @@
     "    plt.show()\n",
     "\n",
     "\n",
-    "plotTouch(11)"
+    "plotTouch(13)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dc0c1ec4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plotLifebloom():\n",
+    "    calcLifebloomTick()\n",
+    "    calcLifebloomBomb()\n",
+    "\n",
+    "plotLifebloom()"
    ]
   }
  ],
