Improve Resto Druid Simulation for BCC
Complete the Lifebloom simulation.

--- a/wow/simulation/bcc/resto-druid.ipynb
+++ b/wow/simulation/bcc/resto-druid.ipynb
@@ -346,8 +346,14 @@
    "outputs": [],
    "source": [
     "def plotLifebloom():\n",
-    "    calcLifebloomTick()\n",
-    "    calcLifebloomBomb()\n",
+    "    mana = 220 * (0.8 if treeOfLife else 1.0)\n",
+    "\n",
+    "    foo = calcLifebloomTick()\n",
+    "    bar = calcLifebloomBomb()\n",
+    "\n",
+    "    print('single cast HPS = %d, HPM = %d' % ((foo + bar)/ 1.5, (foo + bar) / mana))\n",
+    "    print('three stacks refresh HPS = %d, HPM = %d' % ((foo / 7.0 * 6.0 * 3.0)/ 1.5, (foo / 7.0 * 6.0 * 3.0) / mana))\n",
+    "\n",
     "\n",
     "plotLifebloom()"
    ]
