Update WoW BCC Simulation spirit-to-mp5
Simulate the benifits for Intellect as well.

--- a/wow/simulation/bcc/spirit-to-mp5.ipynb
+++ b/wow/simulation/bcc/spirit-to-mp5.ipynb
@@ -9,8 +9,8 @@
    "source": [
     "from math import ceil\n",
     "\n",
-    "def basetick(intellect):\n",
-    "    return ceil(5 * (0.001 + (intellect ** 0.5) * 10 * 0.009327) * 0.60)"
+    "def basetick(intellect, spirit):\n",
+    "    return ceil(5 * (0.001 + (intellect ** 0.5) * spirit * 0.009327) * 0.60)"
    ]
   },
   {
@@ -21,7 +21,7 @@
    "outputs": [],
    "source": [
     "def solution(time, intellect, innervate):\n",
-    "    base = basetick(intellect) / 2.0\n",
+    "    base = basetick(intellect, 10) / 2.0\n",
     "    amount = base * time * 0.3\n",
     "    if innervate:\n",
     "        bursttime = time // 360 * 20 + min(time % 360, 20)\n",
@@ -39,27 +39,78 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "innervate **off**, 500 intellect, 60 seconds fight, 10 spirit = 5.25 mp5\n",
-      "innervate **off**, 500 intellect, 120 seconds fight, 10 spirit = 5.25 mp5\n",
-      "innervate **off**, 500 intellect, 180 seconds fight, 10 spirit = 5.25 mp5\n",
-      "innervate **off**, 500 intellect, 360 seconds fight, 10 spirit = 5.25 mp5\n",
-      "innervate **off**, 500 intellect, 480 seconds fight, 10 spirit = 5.25 mp5\n",
-      "innervate **on**, 500 intellect, 60 seconds fight, 10 spirit = 26.83 mp5\n",
-      "innervate **on**, 500 intellect, 120 seconds fight, 10 spirit = 16.04 mp5\n",
-      "innervate **on**, 500 intellect, 180 seconds fight, 10 spirit = 12.44 mp5\n",
-      "innervate **on**, 500 intellect, 360 seconds fight, 10 spirit = 8.85 mp5\n",
-      "innervate **on**, 500 intellect, 480 seconds fight, 10 spirit = 10.65 mp5\n"
+      "innervate **on**, 400 intellect, 300 seconds fight, 10 spirit = 8.20 mp5\n",
+      "innervate **on**, 500 intellect, 300 seconds fight, 10 spirit = 9.57 mp5\n",
+      "innervate **on**, 600 intellect, 300 seconds fight, 10 spirit = 9.57 mp5\n"
      ]
     }
    ],
    "source": [
-    "for innervate in [False, True]:\n",
-    "    for intellect in [500]:\n",
-    "        for time in [60, 120, 180, 360, 480]:\n",
+    "# for innervate in [False, True]:\n",
+    "for innervate in [True]:\n",
+    "    # for intellect in [500]:\n",
+    "    for intellect in [400, 500, 600]:\n",
+    "        # for time in [60, 120, 180, 360, 480]:\n",
+    "        for time in [300]:\n",
     "            print('innervate **%s**, %d intellect, %d seconds fight, 10 spirit = %.2f mp5' % ('on' if innervate else 'off', \n",
     "                                                                                   intellect, \n",
     "                                                                                   time,\n",
     "                                                                                   solution(time, intellect, innervate) * 5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "f65bdaf8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution2(time, intellect, spirit, innervate):\n",
+    "    base = (basetick(intellect + 10, spirit) - basetick(intellect, spirit)) / 2.0\n",
+    "    amount = 150 + base * time * 0.3\n",
+    "    if innervate:\n",
+    "        bursttime = time // 360 * 20 + min(time % 360, 20)\n",
+    "        amount += base * bursttime * (4.0 - 0.3)\n",
+    "    return amount / time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "b6a5a3db",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "innervate **on**, 400 intellect, 300 spirit, 300 seconds fight, 10 intellect = 5.23 mp5\n",
+      "innervate **on**, 400 intellect, 400 spirit, 300 seconds fight, 10 intellect = 6.60 mp5\n",
+      "innervate **on**, 400 intellect, 500 spirit, 300 seconds fight, 10 intellect = 7.97 mp5\n",
+      "innervate **on**, 500 intellect, 300 spirit, 300 seconds fight, 10 intellect = 5.23 mp5\n",
+      "innervate **on**, 500 intellect, 400 spirit, 300 seconds fight, 10 intellect = 5.23 mp5\n",
+      "innervate **on**, 500 intellect, 500 spirit, 300 seconds fight, 10 intellect = 6.60 mp5\n",
+      "innervate **on**, 600 intellect, 300 spirit, 300 seconds fight, 10 intellect = 5.23 mp5\n",
+      "innervate **on**, 600 intellect, 400 spirit, 300 seconds fight, 10 intellect = 5.23 mp5\n",
+      "innervate **on**, 600 intellect, 500 spirit, 300 seconds fight, 10 intellect = 6.60 mp5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# for innervate in [False, True]:\n",
+    "for innervate in [True]:\n",
+    "    # for intellect in [500]:\n",
+    "    for intellect in [400, 500, 600]:\n",
+    "        # for spirit in [500]:\n",
+    "        for spirit in [300, 400, 500]:\n",
+    "            # for time in [60, 120, 180, 360, 480]:\n",
+    "            for time in [300]:\n",
+    "                print('innervate **%s**, %d intellect, %d spirit, %d seconds fight, 10 intellect = %.2f mp5' % (\n",
+    "                      'on' if innervate else 'off',\n",
+    "                      intellect, \n",
+    "                      spirit,\n",
+    "                      time,\n",
+    "                      solution2(time, intellect, spirit, innervate) * 5))"
    ]
   }
  ],
