--- a/wow/simulation/bcc/feral-tank.ipynb
+++ b/wow/simulation/bcc/feral-tank.ipynb
@@ -27,7 +27,7 @@
     {
      "data": {
       "text/plain": [
-       "(0.738619227659156, 33797.0)"
+       "(0.7447594047942976, 34897.75)"
       ]
      },
      "execution_count": 2,
@@ -36,7 +36,7 @@
     }
    ],
    "source": [
-    "armor_dr(26459, 527)"
+    "armor_dr(27339, 530)"
    ]
   },
   {
@@ -59,7 +59,7 @@
     {
      "data": {
       "text/plain": [
-       "(3.3329828204328136, 2.571561500635859)"
+       "(2.673084343275453, 1.9116630234784986)"
       ]
      },
      "execution_count": 4,
@@ -68,13 +68,13 @@
     }
    ],
    "source": [
-    "crit_reduction(35, 78)"
+    "crit_reduction(35, 52)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -88,7 +88,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
