Update WoW BCC Simulation for Spell Haste
Add the data sample for base 7.5 to target 6.0.

--- a/wow/simulation/bcc/spell-haste.ipynb
+++ b/wow/simulation/bcc/spell-haste.ipynb
@@ -22,6 +22,7 @@
       "R1.0: 112.64\n",
       "R1.1: 225.29\n",
       "R1.2: 337.93\n",
+      "R1.H: 394.25\n",
       "R2.0: 450.57\n"
      ]
     }
@@ -30,6 +31,7 @@
     "print('R1.0: %.2f' % hasteReq(7.0, 7.5))\n",
     "print('R1.1: %.2f' % hasteReq(7.0, 8.0))\n",
     "print('R1.2: %.2f' % hasteReq(7.0, 8.5))\n",
+    "print('R1.H: %.2f' % hasteReq(6.0, 7.5))\n",
     "print('R2.0: %.2f' % hasteReq(7.0, 9.0))"
    ]
   }
