--- a/wow/simulation/bcc/resto-druid.ipynb
+++ b/wow/simulation/bcc/resto-druid.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "2a33573d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +31,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "8c30fb05",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +47,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "89e99bb8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +71,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "48bc186a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +129,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "7d4e8be6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +170,6 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "f995b3b5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +206,6 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "e2fb7369",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +215,6 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "7353da79",
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +280,6 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "21404c57",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,7 +310,6 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "f26a9e1d",
    "metadata": {},
    "outputs": [
     {
@@ -358,7 +348,6 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "20105ee0",
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +386,6 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "22ee36aa",
    "metadata": {},
    "outputs": [
     {
@@ -463,7 +451,6 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "dc0c1ec4",
    "metadata": {},
    "outputs": [
     {
@@ -494,7 +481,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -508,7 +495,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
