--- a/wow/simulation/bcc/spell-haste.ipynb
+++ b/wow/simulation/bcc/spell-haste.ipynb
@@ -34,6 +34,31 @@
     "print('R1.H: %.2f' % hasteReq(6.0, 7.5))\n",
     "print('R2.0: %.2f' % hasteReq(7.0, 9.0))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R1.0: 124.80\n",
+      "R1.1: 238.25\n",
+      "R1.2: 351.71\n",
+      "R1.H: 410.82\n",
+      "R2.0: 465.16\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('R1.0: %.2f' % hasteReq(7.0 - 0.05, 7.5))\n",
+    "print('R1.1: %.2f' % hasteReq(7.0 - 0.05, 8.0))\n",
+    "print('R1.2: %.2f' % hasteReq(7.0 - 0.05, 8.5))\n",
+    "print('R1.H: %.2f' % hasteReq(6.0 - 0.05, 7.5))\n",
+    "print('R2.0: %.2f' % hasteReq(7.0 - 0.05, 9.0))"
+   ]
   }
  ],
  "metadata": {
@@ -52,7 +77,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
