Update WoW Simulation BCC SpellHaste
Add the results of 20 milliseconds buff calculation.

--- a/wow/simulation/bcc/spell-haste.ipynb
+++ b/wow/simulation/bcc/spell-haste.ipynb
@@ -44,6 +44,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "R1.0: 117.48\n",
+      "R1.1: 230.45\n",
+      "R1.2: 343.42\n",
+      "R1.H: 400.84\n",
+      "R2.0: 456.38\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('R1.0: %.2f' % hasteReq(7.0 - 0.02, 7.5))\n",
+    "print('R1.1: %.2f' % hasteReq(7.0 - 0.02, 8.0))\n",
+    "print('R1.2: %.2f' % hasteReq(7.0 - 0.02, 8.5))\n",
+    "print('R1.H: %.2f' % hasteReq(6.0 - 0.02, 7.5))\n",
+    "print('R2.0: %.2f' % hasteReq(7.0 - 0.02, 9.0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "R1.0: 124.80\n",
       "R1.1: 238.25\n",
       "R1.2: 351.71\n",
@@ -77,7 +102,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
